# meta

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
include/meta/: connection.h  connection_old.h  object.h  util.h
tests/: tests.cpp
